--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   
       <div
          style="font-family:UniverseLTStd, Arial;font-size:13px;line-height:1;text-align:center;color:#000000;"
-      >Abrir no <a href="#" target="_blank" style="color:#000">
+      >Abrir no <a href="https://theocratico.github.io/NATAL2023/" target="_blank" style="color:#000">
           Browser.</a></div>
     
                 </td>
